# diagnostics-NIL

./: .gitignore  README.md  analysis_plan.md  pyproject.toml  requirements.txt
findoutlie/: detectors.py  metrics.py  outfind.py  registration.py  spm_funcs.py
findoutlie/tests/: test_detectors.py  test_dvars.py  test_spm_funcs.py
scripts/: find_outliers.py  validate_data.py
solutions/: detectors.py  metrics.py  validate_data.py
