[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "findoutlie"
author = "NIL"
author-email = "team@email"
home-page = "https://github.com/nipraxis-fall-2022/diagnostics-nil"
classifiers = ["License :: OSI Approved :: BSD License",
               "Programming Language :: Python :: 3"]
description-file="README.md"
# Check against requirements.txt
requires = [
    'nibabel',
    'numpy',
    'scipy',
    'matplotlib',
    'simpleitk',
]
requires-python=">=3.6"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38", "py39", "py310"]
